SERVER-8544 Disable having duplicate regex options in JSON parsing